--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-        <link rel="shortcut icon" href="image/favicon-vermelho.png" type="image/x-icon" id="favicon">
+        <link rel="shortcut icon" href="/image/favicon-vermelho.ico" type="image/x-icon">
 
         <title>Menu CSS</title>
 
