--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <main>
         
-            <div>
+            <div class="divisoriaTexto">
 
                 <h1>Menu <span id="span">CSS</span></h1>
                 
